--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/material": "^5.15.18",
     "@reduxjs/toolkit": "^2.2.5",
+    "@rtk-query/codegen-openapi": "^1.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,9 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "esbuild": "^0.21.3",
+    "esbuild-runner": "^2.2.2",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -27,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-api-client": "npx @rtk-query/codegen-openapi openapi-config.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.4"
   }
 }
