--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start --verbose",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "generate-api-client": "npx @rtk-query/codegen-openapi openapi-config.ts"
   },
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@types/lodash": "^4.17.4"
   }
 }
