--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@mui/x-date-pickers": "^7.5.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@rtk-query/codegen-openapi": "^1.2.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +18,7 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "dayjs": "^1.11.11",
     "esbuild": "^0.21.3",
     "esbuild-runner": "^2.2.2",
     "lodash": "^4.17.21",
